--- a/knoblibrary/src/main/res/values/attrs.xml
+++ b/knoblibrary/src/main/res/values/attrs.xml
@@ -37,6 +37,7 @@
             <enum name="off" value="0"/>
             <enum name="vertical" value="1"/>
             <enum name="horizontal" value="2"/>
+            <enum name="vertical_horizontal" value="3"/>
         </attr>
         <attr name="kSwipeSensitivityPixels" format="integer" />
 
