--- a/knoblibrary/src/main/res/values/attrs.xml
+++ b/knoblibrary/src/main/res/values/attrs.xml
@@ -38,6 +38,7 @@
             <enum name="vertical" value="1"/>
             <enum name="horizontal" value="2"/>
             <enum name="vertical_horizontal" value="3"/>
+            <enum name="circular" value="4"/>
         </attr>
         <attr name="kSwipeSensitivityPixels" format="integer" />
 
