--- a/knobsample/src/main/res/layout/activity_sample.xml
+++ b/knobsample/src/main/res/layout/activity_sample.xml
@@ -119,7 +119,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:lines="2"
-                        android:text="Integer value input - swipe in both directions" />
+                        android:text="Integer value input / Both" />
 
                 </LinearLayout>
 
@@ -150,6 +150,7 @@
                         app:kStateMarkersAccentColor="@color/transparent_500"
                         app:kStateMarkersAccentPeriodicity="3"
                         app:kStateMarkersRelativeLength="0"
+                        app:kSwipe="circular"
                         app:kStateMarkersWidth="1dp" />
 
                     <TextView
@@ -157,7 +158,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:lines="2"
-                        android:text="Infinite knob" />
+                        android:text="Infinite knob / Circular" />
 
                 </LinearLayout>
 
@@ -205,7 +206,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:lines="2"
-                        android:text="Volume knob" />
+                        android:text="Volume knob / Vertical" />
 
                 </LinearLayout>
 
