--- a/knoblibrary/src/main/res/values/attrs.xml
+++ b/knoblibrary/src/main/res/values/attrs.xml
@@ -69,6 +69,7 @@
             <enum name="prev" value = "2"/>
             <enum name="revert" value = "3"/>
             <enum name="menu" value = "4" />
+            <enum name="user" value = "5" />
         </attr>
 
         <attr name="kEnabled" format="boolean"/>
